--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "daisyui": "^2.22.0",
     "ethers": "^5.6.9",
     "keyv": "^4.5.0",
-    "next": "12.2.5",
-    "react": "18.2.0",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
     "react-countup": "^6.3.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-jazzicon": "^1.0.4",
     "sass": "^1.54.4",
